# MusicPlaylistManager

./: .gitignore  CMakeLists.txt  CMakeUserPresets.json
include/: AnalyticsEngine.h  DataManager.h  LibraryCard.h  LibraryCard.ui  MediaController.h  MusicLibrary.h  Playlist.h  PlaylistItem.h  PlaylistManager.h  Song.h  Util.h  mainwindow.h  playlistCard.h  playlistCard.ui  songCard.h  songCard.ui
src/: DataManager.cpp  LibraryCard.cpp  MediaController.cpp  MusicLibrary.cpp  Playlist.cpp  PlaylistItem.cpp  PlaylistManager.cpp  Song.cpp  main.cpp  mainwindow.cpp  mainwindow.ui  mainwindow.ui.autosave  playlistCard.cpp  songCard.cpp  songCard.ui
